fix: correct three VERIFICATION.md errors found by independent re-verification, and un-break the kms CI job
Independently re-verified the whole repo on a separate aarch64 AL2023 host with
user-level Corretto 11.0.32 + Maven 3.9.9 + ShellCheck 0.10.0. All five defect
fixes hold up, the mutation test detects the reverted defect, and the
audit-schema gate fails correctly under a negative control. Three things in the
document were wrong, and the kms CI job was permanently and uninformatively red.

1. The mutation test's restore step produced a FALSE RED.
   `mv XmlSigner.java.bak XmlSigner.java` restores the file with the .bak's
   original mtime, which is OLDER than the already-compiled class, so
   maven-compiler-plugin skips recompilation and the "should be green again"
   re-run silently tests the MUTATED bytecode. javap confirmed it: source line
   218 read getIssuerX500Principal() and `git status` was clean, while
   target/classes still held getSubjectX500Principal. This is the document's own
   flagship verification step, so the failure mode was maximally misleading.
   Now uses `git checkout --`, with the evidence recorded inline. Also fixed in
   the English summary, which previously left the tree mutated with no restore
   step at all.

2. The suggested remedy for the kms artifact failure was impossible.
   The document said to "point at aws-kms-jce's actual published coordinate".
   No such coordinate exists: search.maven.org returns numFound=0 for
   artifactId kms-jce-provider at ANY version and groupId, direct probes of
   1.0.0/1.0.1/1.1.0 on repo.maven.apache.org all return HTTP 404, and
   aws-samples/aws-kms-jce has zero GitHub releases. Local install is the only
   path; the exact verified commands are now in the document.

3. The open --add-exports question is now answered by measurement.
   JDK 11 needs no runtime flag (JDK 9-15 default --illegal-access=permit opens
   the JDK-8-era packages to the unnamed module). JDK 17 COMPILES but throws
   Ill